--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,19 +1,19 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+<ion-content>
+  <ion-grid *ngIf="showPhotos"> <--- Agrega *ngIf aquí
+    <ion-row>
+      <ion-col size="6" *ngFor="let photo of photoService.photos">
+        <ion-card>
+          <img [src]="photo.webviewPath" />
+          <ion-card-content>
+            <p>{{ photo.filepath }}</p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-fab vertical="bottom" horizontal="center" slot="fixed">
+    <ion-button expand="full" (click)="loadPhotos()">Cargar Fotos</ion-button>
+  </ion-fab>
 </ion-content>
 
 
