Descripcion de los cambios del literal 4

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -13,6 +13,7 @@
   </ion-grid>
   <ion-fab vertical="bottom" horizontal="center" slot="fixed">
     <ion-button expand="full" (click)="loadPhotos()">Cargar Fotos</ion-button>
+    <ion-button expand="full" (click)="takePhoto(50)">Tomar Foto (50% calidad)</ion-button>
   </ion-fab>
 </ion-content>
 
